[package]
name = "borp"
version = "0.1.0"
authors = ["David Brown <david.brown@linaro.org>"]
license = "MIT"
readme = "README.adoc"
repository = "https://github.com/d3zd3z/borp"
description = """
Borp is Borg in Rust.
"""

[dependencies]
data-encoding = "1.2"
error-chain = "0.10"
hostname = "0.1"
libc = "0.2"
nom = "3.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[[bin]]
name = "borp"
test = false
doc = false
